samples/_failures_safe/1761195246_5e0932_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18aced33.c: In function ‘main’:
./samples/SAFE/__tmp_18aced33.c:139:31: error: missing terminating " character
  139 |         choice = read_integer("Choose operation (1-5):
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_18aced33.c:139:9: error: expected expression at end of input
  139 |         choice = read_integer("Choose operation (1-5):
      |         ^~~~~~
./samples/SAFE/__tmp_18aced33.c:139:18: error: too few arguments to function ‘read_integer’
  139 |         choice = read_integer("Choose operation (1-5):
      |                  ^~~~~~~~~~~~
./samples/SAFE/__tmp_18aced33.c:22:5: note: declared here
   22 | int read_integer(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_18aced33.c:139:9: error: expected declaration or statement at end of input
  139 |         choice = read_integer("Choose operation (1-5):
      |         ^~~~~~
./samples/SAFE/__tmp_18aced33.c:139:9: error: expected declaration or statement at end of input
